--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "eslint-plugin-react": "^7.18.3",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-google-analytics": "^2.1.35",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.3",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-source-wordpress": "^3.1.62",
     "gatsby-transformer-sharp": "^2.3.13",
     "husky": "^4.2.3",
     "lint-staged": "^10.0.7",
