--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "prettier": "^1.19.1"
   },
   "keywords": [
