--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.27",
     "@emotion/styled": "^10.0.27",
+    "cypress": "^4.2.0",
     "emotion": "^10.0.27",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3",
@@ -38,6 +39,7 @@
   ],
   "license": "MIT",
   "scripts": {
+    "cy:open": "cypress open",
     "build": "gatsby build",
     "dev": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
